--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="WeChat Image_20201210151257.jpg" alt="Profile Picture">
+					<img class="profile-pic" src="Sukhjinder.jpeg.jpg" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
@@ -25,8 +25,8 @@
 		<div class="container">
 			<div class="row name-title-company">
 				<div class="col is-6">
-					<p class="text-name">Ashi Thakuri</p>
-					<p class="text-title-company">Asst Vice President</p>
+					<p class="text-name">Sukhjinder Singh</p>
+					<p class="text-title-company">HR Business Partner - Executivet</p>
 					<p class="text-title-company">ITCAN PTE LIMITED</p>
 					<p class="text-title-company">Singapore	*	Malaysia	*	HKG	*	Australia
 				</div>
@@ -38,14 +38,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:ashi@itcan.biz">
+		<a href="mailto:suki@itcan.biz">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-email.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">ashi@itcan.biz</p>
+						<p class="text-detail">suki@itcan.biz</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -56,14 +56,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="tel:+6593229786">
+		<a href="tel:+6584958599">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-phone.svg" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">(+65) 9322 9786</p>
+						<p class="text-detail">(+65) 8495 8599</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
